<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/purple_500"
    android:layout_height="match_parent"
    tools:context=".feature.ordemServico.ActOrdemServico">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            app:titleTextColor="#FFFFFF"
            android:background="#707070"
            android:elevation="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" /-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView"
                        android:text="@string/cliente"/>

                    <EditText
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtClient"
                        android:hint="@string/digite_cliente"
                        android:inputType="textPersonName"
                        android:autofillHints="@string/digite_cliente"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">
                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView3"
                        android:text="@string/descricao" />

                    <EditText
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtDesc"
                        android:hint="@string/digite_descricao"
                        android:inputType="textPersonName"
                        android:autofillHints="@string/digite_descricao"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView4"
                        android:text="@string/resolutio" />

                    <EditText
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtResolotion"
                        android:hint="@string/descreva_resolution"
                        android:inputType="textPersonName"
                        android:autofillHints="@string/descreva_resolution"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">
                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView5"
                        android:text="@string/data_inicial"
                        app:layout_constraintTop_toBottomOf="@+id/edtResolotion" />

                    <EditText
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtDateStatart"
                        android:hint="@string/digite_data_inicial"
                        android:inputType="date"
                        android:autofillHints="@string/digite_data_inicial"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView6"
                        android:text="@string/data_finalizao"/>


                    <EditText
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtDateEnd"
                        android:hint="@string/digite_data_final"
                        android:textColorHint="@color/white"
                        android:inputType="date"
                        android:autofillHints="@string/digite_data_final"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7"
                        android:text="@string/tecnico"
                        app:layout_constraintTop_toBottomOf="@+id/edtClient" />

                    <EditText
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtTecnico"
                        android:hint="@string/digite_tecnico"
                        android:inputType="textPersonName"
                        android:textColorHint="@color/white"
                        android:autofillHints="@string/digite_tecnico" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView8"
                        android:textColor="@color/white"
                        android:text="@string/valor"
                        tools:ignore="MissingConstraints" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:id="@+id/edtValue"
                        android:inputType="numberDecimal"
                        android:autofillHints=""
                        android:textColorHint="@color/white"
                        tools:ignore="LabelFor" />


                </LinearLayout>
                <Button
                    android:id="@+id/btnSave"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_700"
                    android:text="@string/btn_salvar"
                    app:layout_constraintTop_toBottomOf="@+id/edtValue" />

                <Button
                    android:onClick="onClickExcluir"
                    android:id="@+id/btnExcluir"
                    android:background="@color/purple_700"
                    android:text="@string/btnExcluir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>